package com.stcos.server.model.form;

/**
 * description
 *
 * @author Kekwy
 * @version 1.0
 * @since 2023/7/11 16:11
 */
public class FormState {


    public static final String STATE_WRITING = "填写中";
    public static final String STATE_NULL = "未填写";
    public static final String STATE_VERIFYING = "审核中";
    public static final String STATE_REFUSED = "已驳回";
    public static final String STATE_COMPLETED = "已完成";

}
