@startuml
class TestProblemForm {
}
class TestProblemForm$Problem {
}
class TestWorkCheckForm {
}
class TestWorkCheckForm$WorkStep {
}
class TestWorkCheckForm$WorkStep$StepContent {
}
abstract class Form {
}
class FormState {
}
class FormType {
}
class ContractForm {
}
class ContractForm$ClientInfo {
}
class ContractForm$TrusteeInfo {
}
class DocumentReviewForm {
}
class DocumentReviewForm$ReviewCategory {
}
class DocumentReviewForm$ReviewCategory$ReviewItem {
}
class ApplicationVerifyForm {
}
class TestReportForm {
}
class TestReportForm$SoftwareEnvironment {
}
class TestReportForm$SoftwareEnvironment$OperatingSystem {
}
class TestReportForm$SoftwareEnvironment$Software {
}
class TestReportForm$SoftwareEnvironment$AncillaryTool {
}
class TestReportForm$SoftwareEnvironment$DevelopmentTool {
}
class TestReportForm$SoftwareEnvironment$TestSample {
}
class TestReportForm$FunctionTest {
}
class TestReportForm$GeneralTest {
}
class TestRecordsForm {
}
class TestRecordsForm$TestRecord {
}
class TestFunctionForm {
}
class TestFunctionForm$TestFunction {
}
class TestFunctionForm$TestFunction$TestFunctionItem {
}
class TestPlanVerifyForm {
}
class TestPlanVerifyForm$VerifyEmployee {
}
class TestPlanVerifyForm$VerifyItem {
}
class FormMetadata {
}
class TestPlanForm {
}
class TestPlanForm$EditRecord {
}
class TestPlanForm$TimeTable {
}
class ApplicationForm {
}
class ApplicationForm$SoftwareScale {
}
class ApplicationForm$ClientSystem {
}
class ApplicationForm$Medium {
}
class ApplicationForm$CompanyInfo {
}
class QuotationForm {
}
class ConfidentialityForm {
}
class ReportVerifyForm {
}


Form <|-- TestProblemForm
TestProblemForm +.. TestProblemForm$Problem
Form <|-- TestWorkCheckForm
TestWorkCheckForm +.. TestWorkCheckForm$WorkStep
TestWorkCheckForm$WorkStep +.. TestWorkCheckForm$WorkStep$StepContent
Form <|-- ContractForm
ContractForm +.. ContractForm$ClientInfo
ContractForm +.. ContractForm$TrusteeInfo
Form <|-- DocumentReviewForm
DocumentReviewForm +.. DocumentReviewForm$ReviewCategory
DocumentReviewForm$ReviewCategory +.. DocumentReviewForm$ReviewCategory$ReviewItem
Form <|-- ApplicationVerifyForm
Form <|-- TestReportForm
TestReportForm +.. TestReportForm$SoftwareEnvironment
TestReportForm$SoftwareEnvironment +.. TestReportForm$SoftwareEnvironment$OperatingSystem
TestReportForm$SoftwareEnvironment +.. TestReportForm$SoftwareEnvironment$Software
TestReportForm$SoftwareEnvironment +.. TestReportForm$SoftwareEnvironment$AncillaryTool
TestReportForm$SoftwareEnvironment +.. TestReportForm$SoftwareEnvironment$DevelopmentTool
TestReportForm$SoftwareEnvironment +.. TestReportForm$SoftwareEnvironment$TestSample
TestReportForm +.. TestReportForm$FunctionTest
TestReportForm +.. TestReportForm$GeneralTest
Form <|-- TestRecordsForm
TestRecordsForm +.. TestRecordsForm$TestRecord
Form <|-- TestFunctionForm
TestFunctionForm +.. TestFunctionForm$TestFunction
TestFunctionForm$TestFunction +.. TestFunctionForm$TestFunction$TestFunctionItem
Form <|-- TestPlanVerifyForm
TestPlanVerifyForm +.. TestPlanVerifyForm$VerifyEmployee
TestPlanVerifyForm +.. TestPlanVerifyForm$VerifyItem
Form <|-- TestPlanForm
TestPlanForm +.. TestPlanForm$EditRecord
TestPlanForm +.. TestPlanForm$TimeTable
Form <|-- ApplicationForm
ApplicationForm +.. ApplicationForm$SoftwareScale
ApplicationForm +.. ApplicationForm$ClientSystem
ApplicationForm +.. ApplicationForm$Medium
ApplicationForm +.. ApplicationForm$CompanyInfo
Form <|-- QuotationForm
Form <|-- ConfidentialityForm
Form <|-- ReportVerifyForm
@enduml